# shai

shai-cli/: Cargo.toml
shai-cli/src/: main.rs
shai-cli/src/headless/: app.rs
shai-core/: Cargo.toml
shai-core/src/agent/: agent.rs  brain.rs  builder.rs  events.rs  protocol.rs
shai-core/src/agent/actions/: brain.rs  tools.rs
shai-core/src/agent/output/: pretty.rs
shai-core/src/agent/states/: starting.rs
shai-core/src/config/: agent.rs  config.rs
shai-core/src/runners/clifixer/: fix.rs
shai-core/src/runners/coder/: coder.rs
shai-core/src/runners/gerund/: gerund.rs
shai-core/src/runners/searcher/: searcher.rs
shai-core/src/tools/: types.rs
shai-http/: Cargo.toml
shai-http/src/apis/openai/completion/: formatter.rs
shai-http/src/apis/openai/response/: formatter.rs  types.rs
shai-http/src/apis/simple/: formatter.rs  handler.rs
shai-http/src/session/: lifecycle.rs  logger.rs  manager.rs  session.rs
shai-llm/: Cargo.toml
shai-llm/src/: lib.rs
shai-llm/src/tool/: call_structured_output.rs
shai-macros/: Cargo.toml
