[package]
name = "shai-core"
version = "0.1.10"
edition = "2021"

[dependencies]
# New LLM module dependencies
async-trait = "0.1"
reqwest = { version = "0.12", features = ["json", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4"] }
tokio = { version = "1.0", features = ["full"] }
tokio-util = "0.7"
futures = "0.3"
termimad = "0.34"
tree-sitter = "0.25"
tree-sitter-highlight = "0.25"
json_comments = "0.2.2"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

# Tool system dependencies
schemars = "1.0.1"
shai-macros = { path = "../shai-macros" }
shai-llm = { path = "../shai-llm" }
openai_dive = "1.3.1"
regex = "1.12"
walkdir = "2.4"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
tracing-appender = "0.2"
similar = "2.6"
fs = "0.0.5"
dirs = "6.0"
rmcp = { version = "0.6.0", features = ["schemars", "auth", "client", "transport-child-process", "transport-streamable-http-client", "transport-sse-client"] }

# OAuth dependencies
oauth2 = "4.4"
warp = "0.3"
anyhow = "1.0"
webbrowser = "1.0"

[dev-dependencies]
tempfile = "3.23.0"
paste = "1.0"

[lints.rust]
dead_code = "allow"
unused_variables = "allow"
#unused_mut = "allow"
#unused_imports = "allow"

